src/objects/Unit_Charges__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Type</label>
        <referenceTo>Area_Type__c</referenceTo>
        <relationshipLabel>Unit Chargess</relationshipLabel>
        <relationshipName>Unit_Chargess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Unit Chargess</relationshipLabel>
        <relationshipName>Unit_Chargess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Discount__c</fullName>
        <label>Channel Partner Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_As__c</fullName>
        <label>Cost As</label>
        <picklist>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Pay Plan Header</label>
        <referenceTo>Customer_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Unit Chargess</relationshipLabel>
        <relationshipName>Unit_Chargess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Unit Chargess</relationshipLabel>
        <relationshipName>Unit_Chargess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Charges</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Unit Chargess</relationshipLabel>
        <relationshipName>Unit_Chargess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inaugral_Discount__c</fullName>
        <label>Inaugral Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ingr_Discount__c</fullName>
        <label>Inaugral Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <label>Net Cost</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Discount__c</fullName>
        <formula>Special_Discount__c + Broker_Discount__c + Ingr_Discount__c + Rebate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Net_Cost__c</fullName>
        <formula>Amount__c +( Net_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Unit Charges</relationshipLabel>
        <relationshipName>Unit_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Unit Chargess</relationshipLabel>
        <relationshipName>Unit_Chargess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Discount__c</fullName>
        <label>Special Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Unit Charges</label>
    <nameField>
        <label>Unit Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Charges</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>